--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.5.6",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
