--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "14.2.11",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-compare-slider": "^3.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
