--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@kinfe123/farm-ui": "^1.0.12",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -45,6 +46,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.5.6",
+    "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
@@ -55,6 +57,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-use": "^17.5.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
