--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.1",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@kinfe123/farm-ui": "^1.0.12",
+    "@prisma/client": "5.20.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -53,9 +55,12 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
+    "next-auth": "5.0.0-beta.21",
     "next-themes": "^0.3.0",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-compare-slider": "^3.1.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
