--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.2",
     "@aws-sdk/client-s3": "^3.658.1",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
