--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-hook/window-size": "^3.1.1",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
+    "@tanstack/react-table": "^8.20.5",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -72,10 +73,12 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-spinners": "^0.14.1",
     "react-use": "^17.5.1",
     "recharts": "^2.12.7",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
