--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-spinners": "^0.14.1",
     "react-use": "^17.5.1",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
