--- a/package.json
+++ b/package.json
@@ -51,16 +51,19 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jalaali-js": "^1.1.3",
     "@types/three": "^0.169.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "date-fns-jalali": "4.1.0-0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.5.6",
     "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
+    "jalaali-js": "^1.2.7",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-auth": "5.0.0-beta.21",
@@ -69,7 +72,7 @@
     "react": "^18",
     "react-compare-slider": "^3.1.0",
     "react-countdown-circle-timer": "^3.2.1",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "9.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
