--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
     "jalaali-js": "^1.2.7",
+    "lenis": "^1.1.13",
     "lucide-react": "^0.441.0",
+    "motion": "^10.18.0",
     "next": "14.2.11",
     "next-auth": "5.0.0-beta.21",
     "next-themes": "^0.3.0",
