--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-spinners": "^0.14.1",
+    "react-textarea-autosize": "^8.5.3",
     "react-use": "^17.5.1",
+    "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
