--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-day-picker": "9.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.1",
     "react-resizable-panels": "^2.1.3",
     "react-spinners": "^0.14.1",
     "react-textarea-autosize": "^8.5.3",
